# CucQuy_payment_notification

./: .gitignore  BUILD.md  CMakeLists.txt  flash.sh  sdkconfig.defaults  sdkconfig.defaults.esp32
main/: CMakeLists.txt  config.h  idf_component.yml  main.c  main.cc
main/app/: notify_app.cc  notify_app.h
main/audio/: audio.cc  audio.h
main/display/: display.cc  display.h
main/network/: mqtt.cc  mqtt.h  tts.cc  tts.h  wifi.cc  wifi.h
partitions/: partitions.csv
tools/: gen_emv.py
